[package]
authors = ["Roma Sokolov", "Alexander Zhuravlev"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the BMP280 pressure sensor"
documentation = "https://docs.rs/bmp280"
keywords = ["embedded-hal-driver", "accelerometer", "compass", "MEMS"]
license = "MIT"
name = "bmp280-ehal"
repository = "https://github.com/copterust/bmp280"
version = "0.0.6"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"

[dependencies.defmt]
version = "0.3"
optional = true

[features]
default = []
defmt-03 = [
    "dep:defmt",
    "embedded-hal/defmt-03",
]
